--- a/scripts/xpla.protod.config.json
+++ b/scripts/xpla.protod.config.json
@@ -2,7 +2,7 @@
     "repos": [
       { "owner": "cosmos", "repo": "cosmos-sdk", "branch": "release/v0.50.x" },
       { "owner": "cosmos", "repo": "ibc-go", "branch": "release/v8.4.x" },
-      { "owner": "xpladev", "repo": "xpla", "branch": "feature/cosmos_v50" },
+      { "owner": "xpladev", "repo": "xpla", "branch": "release/v1.7.x" },
       { "owner": "xpladev", "repo": "ethermint", "tag": "v0.24.0-xpla" }
     ],
     "protoDirMapping": {
@@ -14,32 +14,25 @@
     "ssh": true,
     "tempRepoDir": "git-modules",
     "targets": [
-      "cosmos/auth/v1beta1/auth.proto",
-      "cosmos/vesting/v1beta1/vesting.proto",
-      "cosmos/crypto/secp256k1/keys.proto",
-      "cosmos/crypto/secp256r1/keys.proto",
-      "cosmos/crypto/ed25519/keys.proto",
-      "cosmos/authz/v1beta1/tx.proto",
-      "cosmos/bank/v1beta1/tx.proto",
-      "cosmos/distribution/v1beta1/tx.proto",
-      "cosmos/feegrant/v1beta1/tx.proto",
-      "cosmos/gov/v1beta1/tx.proto",
-      "cosmos/gov/v1/tx.proto",
-      "cosmos/group/v1/tx.proto",
-      "cosmos/staking/v1beta1/tx.proto",
-      "cosmos/vesting/v1beta1/tx.proto",
-      "cosmos/auth/v1beta1/query.proto",
-      "cosmos/bank/v1beta1/query.proto",
-      "cosmos/staking/v1beta1/query.proto",
-      "cosmos/gov/v1beta1/query.proto",
-      "cosmos/tx/v1beta1/service.proto",
-      "cosmos/tx/v1beta1/tx.proto",
-      "cosmwasm/wasm/v1/tx.proto",
-      "cosmwasm/wasm/v1/query.proto",
-      "ibc/applications/transfer/v1/tx.proto",
-      "ibc/core/channel/v1/tx.proto",
-      "ibc/core/client/v1/tx.proto",
-      "ibc/core/connection/v1/tx.proto",
+      "cosmos/upgrade/**/*.proto",
+      "cosmos/tx/**/*.proto",
+      "cosmos/staking/**/*.proto",
+      "cosmos/slashing/**/*.proto",
+      "cosmos/params/**/*.proto",
+      "cosmos/mint/**/*.proto",
+      "cosmos/gov/**/*.proto",
+      "cosmos/feegrant/**/*.proto",
+      "cosmos/evidence/**/*.proto",
+      "cosmos/distribution/**/*.proto",
+      "cosmos/consensus/**/*.proto",
+      "cosmos/base/**/*.proto",
+      "cosmos/bank/**/*.proto",
+      "cosmos/autocli/**/*.proto",
+      "cosmos/authz/**/*.proto",
+      "cosmos/auth/**/*.proto",
+      "cosmos/app/**/*.proto",
+      "cosmwasm/**/*.proto",
+      "ibc/**/*.proto",
       "xpla/**/*.proto",
       "ethermint/**/*.proto"
     ]
