--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,8 @@
     "--no-lockfile"
   ],
   "packages": [
-    "libs/*"
+    "libs/*",
+    "networks/*"
   ],
   "version": "independent",
   "registry": "https://registry.npmjs.org",
