--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "xpla-react",
-    "version": "1.0.0",
+    "name": "@xpla/xpla-react",
+    "version": "1.7.0-beta",
     "description": "xpla-react is a JavaScript library providing react query hooks for interacting with xpla sdk.",
     "main": "index.js",
     "module": "esm/index.js",
     "types": "index.d.ts",
-    "author": "",
-    "homepage": "",
+    "author": "Joowon Yun <joowon@delightlabs.io>",
+    "homepage": "https://github.com/xpladev/xplajs",
     "repository": {
       "type": "git",
-      "url": ""
+      "url": "https://github.com/xpladev/xplajs"
     },
     "license": "MIT",
     "publishConfig": {
