--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "xplajs",
-  "version": "1.0.0",
+  "name": "@xpla/xplajs",
+  "version": "1.7.0-beta",
   "main": "index.js",
   "module": "esm/index.js",
+  "author": "Joowon Yun <joowon@delightlabs.io>",
+  "homepage": "https://github.com/xpladev/xplajs",
   "scripts": {
     "clean": "rimraf dist/**",
     "build": "npm run clean; tsc; tsc -p tsconfig.esm.json"
@@ -18,8 +20,11 @@
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3"
   },
-  "author": "",
-  "license": "ISC",
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
+  },
+  "license": "MIT",
   "description": "",
   "devDependencies": {
     "@cosmjs/proto-signing": "^0.32.4"
