--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "xplajs",
-  "version": "1.0.0",
+  "version": "1.7.0-beta",
   "main": "index.js",
+  "repository": "git@github.com:xpladev/xplajs.git",
   "scripts": {
     "codegen:xpla": "telescope transpile --config ./scripts/xpla.telescope.json && telescope transpile --config ./scripts/xpla-react.telescope.json",
     "proto": "telescope download --config ./scripts/xpla.protod.config.json",
     "build": "lerna run build --stream",
     "symlink": "symlink-workspace --logLevel error"
   },
-  "private": true,
   "workspaces": [
     "libs/*",
     "networks/*"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Joowon Yun <joowon@delightlabs.io>",
+  "license": "MIT",
   "description": "",
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
