chore(release): publish
 - @xpla/xpla-react@1.7.0-beta.0
 - @xpla/xplajs@1.7.0-beta.0
 - @xpla/xpla@1.7.0-beta.0

--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla",
-  "version": "1.7.0-beta",
+  "version": "1.7.0-beta.0",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
@@ -30,9 +30,9 @@
     "@interchainjs/types": "1.6.3",
     "@interchainjs/utils": "1.6.3",
     "@scure/bip32": "^1.6.0",
+    "@xpla/xplajs": "^1.7.0-beta.0",
     "decimal.js": "^10.4.3",
-    "interchainjs": "^1.6.5",
-    "@xpla/xplajs": "^1.7.0-beta"
+    "interchainjs": "^1.6.5"
   },
   "keywords": [
     "xpla"
