--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -1,48 +1,47 @@
 {
-    "name": "@xpla/xpla-react",
-    "version": "1.7.0-beta",
-    "description": "xpla-react is a JavaScript library providing react query hooks for interacting with xpla sdk.",
-    "main": "index.js",
-    "module": "esm/index.js",
-    "types": "index.d.ts",
-    "author": "Joowon Yun <joowon@delightlabs.io>",
-    "homepage": "https://github.com/xpladev/xplajs",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/xpladev/xplajs"
-    },
-    "license": "MIT",
-    "publishConfig": {
-      "access": "public",
-      "directory": "dist"
-    },
-    "scripts": {
-      "clean": "rimraf dist/**",
-      "build": "npm run clean; tsc; tsc -p tsconfig.esm.json",
-      "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
-      "lint": "eslint . --fix",
-      "prepare": "npm run build"
-    },
-    "dependencies": {
-      "@interchainjs/cosmos": "1.6.3",
-      "@interchainjs/cosmos-types": "1.6.3",
-      "@interchainjs/types": "1.6.3",
-      "@interchainjs/utils": "1.6.3",
-      "@noble/hashes": "^1.3.1",
-      "decimal.js": "^10.4.3"
-    },
-    "devDependencies": {
-      "@tanstack/react-query": "4.29.1"
-    },
-    "peerDependencies": {
-      "@tanstack/react-query": "4.29.1"
-    },
-    "keywords": [
-      "cosmos",
-      "blockchain",
-      "transaction",
-      "cosmjs",
-      "wallet"
-    ]
-  }
-  
+  "name": "@xpla/xpla-react",
+  "version": "1.7.0-beta.0",
+  "description": "xpla-react is a JavaScript library providing react query hooks for interacting with xpla sdk.",
+  "main": "index.js",
+  "module": "esm/index.js",
+  "types": "index.d.ts",
+  "author": "Joowon Yun <joowon@delightlabs.io>",
+  "homepage": "https://github.com/xpladev/xplajs",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xpladev/xplajs"
+  },
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
+  },
+  "scripts": {
+    "clean": "rimraf dist/**",
+    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json",
+    "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
+    "lint": "eslint . --fix",
+    "prepare": "npm run build"
+  },
+  "dependencies": {
+    "@interchainjs/cosmos": "1.6.3",
+    "@interchainjs/cosmos-types": "1.6.3",
+    "@interchainjs/types": "1.6.3",
+    "@interchainjs/utils": "1.6.3",
+    "@noble/hashes": "^1.3.1",
+    "decimal.js": "^10.4.3"
+  },
+  "devDependencies": {
+    "@tanstack/react-query": "4.29.1"
+  },
+  "peerDependencies": {
+    "@tanstack/react-query": "4.29.1"
+  },
+  "keywords": [
+    "cosmos",
+    "blockchain",
+    "transaction",
+    "cosmjs",
+    "wallet"
+  ]
+}
