--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xplajs",
-  "version": "1.7.0-beta",
+  "version": "1.7.0-beta.0",
   "main": "index.js",
   "module": "esm/index.js",
   "author": "Joowon Yun <joowon@delightlabs.io>",
