--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -19,6 +19,10 @@
     "lint": "eslint . --fix",
     "prepare": "npm run build"
   },
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
+  },
   "dependencies": {
     "@interchainjs/cosmos": "1.6.3",
     "@interchainjs/cosmos-types": "1.6.3",
