--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@xpla/xpla",
   "version": "1.7.0-beta.5",
-  "main": "dist/index.js",
+  "main": "index.js",
   "module": "esm/index.js",
-  "files": [
-    "dist"
-  ],
   "types": "index.d.ts",
   "author": "Joowon Yun <joowon@delightlabs.io>",
   "homepage": "https://github.com/xpladev/xplajs",
@@ -15,8 +12,9 @@
   },
   "license": "MIT",
   "scripts": {
+    "copy": "copyfiles -f README.md package.json dist",
     "clean": "rimraf dist/**",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json",
+    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
     "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
     "lint": "eslint . --fix",
     "prepare": "npm run build"
