chore: implement package

--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla-react",
-  "version": "1.7.0-beta.0",
+  "version": "1.7.0-beta.9",
   "description": "xpla-react is a JavaScript library providing react query hooks for interacting with xpla sdk.",
   "main": "index.js",
   "module": "esm/index.js",
@@ -17,8 +17,9 @@
     "directory": "dist"
   },
   "scripts": {
+    "copy": "copyfiles -f README.md package.json dist",
     "clean": "rimraf dist/**",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json",
+    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
     "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
     "lint": "eslint . --fix",
     "prepare": "npm run build"
