--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -1,13 +1,18 @@
 {
   "name": "@xpla/xplajs",
-  "version": "1.7.0-beta.1",
+  "version": "1.7.0-beta.9",
   "main": "index.js",
   "module": "esm/index.js",
   "author": "Joowon Yun <joowon@delightlabs.io>",
   "homepage": "https://github.com/xpladev/xplajs",
   "scripts": {
+    "copy": "copyfiles -f README.md package.json dist",
     "clean": "rimraf dist/**",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json"
+    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy"
+  },
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
   },
   "dependencies": {
     "@cosmjs/stargate": "^0.32.4",
@@ -19,10 +24,6 @@
     "@interchainjs/utils": "^0.0.1-beta.34",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3"
-  },
-  "publishConfig": {
-    "access": "public",
-    "directory": "dist"
   },
   "license": "MIT",
   "description": "",
