--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla",
-  "version": "1.7.0-beta.1",
+  "version": "1.7.0-beta.9",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
@@ -8,16 +8,13 @@
   "homepage": "https://github.com/xpladev/xplajs",
   "repository": {
     "type": "git",
-    "url": "https://github.com/xpladev/xplajs"
+    "url": "git+https://github.com/xpladev/xplajs.git"
   },
   "license": "MIT",
-  "publishConfig": {
-    "access": "public",
-    "directory": "dist"
-  },
   "scripts": {
+    "copy": "copyfiles -f README.md package.json dist",
     "clean": "rimraf dist/**",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json",
+    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
     "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
     "lint": "eslint . --fix",
     "prepare": "npm run build"
@@ -30,7 +27,7 @@
     "@interchainjs/types": "1.6.3",
     "@interchainjs/utils": "1.6.3",
     "@scure/bip32": "^1.6.0",
-    "@xpla/xplajs": "^1.7.0-beta.1",
+    "@xpla/xplajs": "^1.7.0-beta.8",
     "decimal.js": "^10.4.3",
     "interchainjs": "^1.6.5"
   },
