--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -25,10 +25,12 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "@interchainjs/cosmos": "1.6.3",
-    "@interchainjs/cosmos-types": "1.6.3",
-    "@interchainjs/types": "1.6.3",
-    "@interchainjs/utils": "1.6.3",
+    "@interchainjs/cosmos": "1.9.14",
+    "@interchainjs/cosmos-types": "1.9.14",
+    "@interchainjs/encoding": "1.9.14",
+    "@interchainjs/pubkey": "1.9.14",
+    "@interchainjs/types": "1.9.14",
+    "@interchainjs/utils": "1.9.14",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3"
   },
