--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -15,13 +15,13 @@
     "directory": "dist"
   },
   "dependencies": {
-    "@cosmjs/stargate": "^0.32.4",
-    "@cosmjs/tendermint-rpc": "^0.32.4",
+    "@interchainjs/cosmos": "1.9.14",
+    "@interchainjs/cosmos-types": "1.9.14",
     "@cosmology/lcd": "^0.14.0",
-    "@interchainjs/cosmos": "^0.0.1-beta.34",
-    "@interchainjs/cosmos-types": "^0.0.1-beta.34",
-    "@interchainjs/types": "^0.0.1-beta.34",
-    "@interchainjs/utils": "^0.0.1-beta.34",
+    "@interchainjs/encoding": "1.9.14",
+    "@interchainjs/pubkey": "1.9.14",
+    "@interchainjs/types": "1.9.14",
+    "@interchainjs/utils": "1.9.14",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3"
   },
