--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -23,7 +23,8 @@
     "@interchainjs/types": "1.9.14",
     "@interchainjs/utils": "1.9.14",
     "@noble/hashes": "^1.3.1",
-    "decimal.js": "^10.4.3"
+    "decimal.js": "^10.4.3",
+    "@cosmjs/stargate": "^0.33.0"
   },
   "license": "MIT",
   "description": "",
