--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -20,16 +20,16 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "@interchainjs/auth": "^1.6.3",
-    "@interchainjs/cosmos": "1.6.3",
-    "@interchainjs/cosmos-types": "1.6.3",
-    "@interchainjs/ethereum": "1.6.3",
-    "@interchainjs/types": "1.6.3",
-    "@interchainjs/utils": "1.6.3",
-    "@scure/bip32": "^1.6.0",
-    "@xpla/xplajs": "^1.7.0-beta.10",
+    "@ethersproject/transactions": "^5.7.0",
+    "@interchainjs/auth": "1.9.14",
+    "@interchainjs/cosmos": "1.9.14",
+    "@interchainjs/cosmos-types": "1.9.14",
+    "@interchainjs/ethereum": "1.9.14",
+    "@interchainjs/types": "1.9.14",
+    "@interchainjs/utils": "1.9.14",
+    "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3",
-    "interchainjs": "^1.6.5"
+    "interchainjs": "1.9.14"
   },
   "keywords": [
     "xpla"
