--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla",
-  "version": "1.7.0-beta.11",
+  "version": "1.7.0-beta.12",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
@@ -11,6 +11,10 @@
     "url": "git+https://github.com/xpladev/xplajs.git"
   },
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "directory": "dist"
+  },
   "scripts": {
     "copy": "copyfiles -f README.md package.json dist",
     "clean": "rimraf dist/**",
@@ -29,7 +33,8 @@
     "@interchainjs/utils": "1.9.14",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3",
-    "interchainjs": "1.9.14"
+    "interchainjs": "1.9.14",
+    "@xpla/xplajs": "1.7.0-beta.12"
   },
   "keywords": [
     "xpla"
