--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -41,7 +41,8 @@
     "bip39": "^3.1.0",
     "decimal.js": "^10.4.3",
     "deepmerge": "4.2.2",
-    "interchainjs": "1.16.1"
+    "interchainjs": "^1.13.0",
+    "ethers": "^6.13.5"
   },
   "keywords": [
     "xpla"
