--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "codegen": "ts-node ./scripts/codegen.ts",
     "proto": "telescope download --config ./scripts/xpla.protod.config.json",
+    "codegen:evm": "sh ./scripts/gen-precompiles.sh",
     "build": "lerna run build --stream",
     "symlink": "symlink-workspace --logLevel error"
   },
@@ -30,6 +31,8 @@
     "rimraf": "4.4.1",
     "starshipjs": "^2.4.0",
     "symlink-workspace": "^1.9.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "@typechain/ethers-v6": "^0.5.1",
+    "typechain": "^8.3.2"
   }
 }
