--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -37,7 +37,8 @@
     "@noble/hashes": "^1.3.1",
     "@xpla/xplajs": "^1.8.0-rc.0",
     "decimal.js": "^10.4.3",
-    "interchainjs": "^1.13.0"
+    "interchainjs": "^1.13.0",
+    "ethers": "^6.13.5"
   },
   "keywords": [
     "xpla"
