--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla-react",
-  "version": "1.7.0-beta.12",
+  "version": "1.7.0",
   "description": "xpla-react is a JavaScript library providing react query hooks for interacting with xpla sdk.",
   "main": "index.js",
   "module": "esm/index.js",
@@ -25,12 +25,12 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "@interchainjs/cosmos": "1.9.14",
-    "@interchainjs/cosmos-types": "1.9.14",
-    "@interchainjs/encoding": "1.9.14",
-    "@interchainjs/pubkey": "1.9.14",
-    "@interchainjs/types": "1.9.14",
-    "@interchainjs/utils": "1.9.14",
+    "@interchainjs/cosmos": "^1.9.14",
+    "@interchainjs/cosmos-types": "^1.9.14",
+    "@interchainjs/encoding": "^1.9.14",
+    "@interchainjs/pubkey": "^1.9.14",
+    "@interchainjs/types": "^1.9.14",
+    "@interchainjs/utils": "^1.9.14",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3"
   },
