--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla",
-  "version": "1.7.0-beta.12",
+  "version": "1.7.0",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
@@ -25,16 +25,16 @@
   },
   "dependencies": {
     "@ethersproject/transactions": "^5.7.0",
-    "@interchainjs/auth": "1.9.14",
-    "@interchainjs/cosmos": "1.9.14",
-    "@interchainjs/cosmos-types": "1.9.14",
-    "@interchainjs/ethereum": "1.9.14",
-    "@interchainjs/types": "1.9.14",
-    "@interchainjs/utils": "1.9.14",
+    "@interchainjs/auth": "^1.9.14",
+    "@interchainjs/cosmos": "^1.9.14",
+    "@interchainjs/cosmos-types": "^1.9.14",
+    "@interchainjs/ethereum": "^1.9.14",
+    "@interchainjs/types": "^1.9.14",
+    "@interchainjs/utils": "^1.9.14",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3",
-    "interchainjs": "1.9.14",
-    "@xpla/xplajs": "1.7.0-beta.12"
+    "interchainjs": "^1.9.14",
+    "@xpla/xplajs": "^1.7.0"
   },
   "keywords": [
     "xpla"
