--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@cosmology/telescope": "^1.11.22",
     "lerna": "^6",
-    "copyfiles": "^2.4.1"
+    "copyfiles": "^2.4.1",
+    "symlink-workspace": "^1.9.0"
   }
 }
