docs: unused prepare

--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -20,8 +20,7 @@
     "clean": "rimraf dist/**",
     "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
     "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
-    "lint": "eslint . --fix",
-    "prepare": "npm run build"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "@ethersproject/transactions": "^5.7.0",
