--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -21,8 +21,7 @@
     "clean": "rimraf dist/**",
     "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
     "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
-    "lint": "eslint . --fix",
-    "prepare": "npm run build"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "@interchainjs/cosmos": "^1.9.14",
