--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -20,19 +20,23 @@
     "clean": "rimraf dist/**",
     "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
     "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "starship": "starship start --config ./starship/configs/config.yaml",
+    "starship:clean": "starship stop --config ./starship/configs/config.yaml",
+    "starship:test": "jest --config ./jest.starship.config.js",
+    "starship:debug": "jest --config ./jest.starship.config.js --runInBand --verbose --bail"
   },
   "dependencies": {
     "@ethersproject/transactions": "^5.7.0",
-    "@interchainjs/auth": "^1.9.14",
-    "@interchainjs/cosmos": "^1.9.14",
-    "@interchainjs/cosmos-types": "^1.9.14",
-    "@interchainjs/ethereum": "^1.9.14",
-    "@interchainjs/types": "^1.9.14",
-    "@interchainjs/utils": "^1.9.14",
+    "@interchainjs/auth": "^1.11.10",
+    "@interchainjs/cosmos": "^1.11.10",
+    "@interchainjs/cosmos-types": "^1.11.10",
+    "@interchainjs/ethereum": "^1.11.10",
+    "@interchainjs/types": "^1.11.10",
+    "@interchainjs/utils": "^1.11.10",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3",
-    "interchainjs": "^1.9.14",
+    "interchainjs": "^1.11.10",
     "@xpla/xplajs": "^1.7.0"
   },
   "keywords": [
