--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xplajs",
-  "version": "1.7.0-beta",
+  "version": "1.7.0",
   "private": true,
   "main": "index.js",
   "repository": "git@github.com:xpladev/xplajs.git",
@@ -19,9 +19,15 @@
   "description": "",
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
+    "@chain-registry/client": "1.18.1",
+    "@chain-registry/v2": "^1.71.216",
     "@cosmology/telescope": "^1.11.22",
-    "lerna": "^6",
+    "@starship-ci/cli": "^3.10.0",
     "copyfiles": "^2.4.1",
-    "symlink-workspace": "^1.9.0"
+    "jest": "^29.6.2",
+    "lerna": "^6",
+    "starshipjs": "^2.4.0",
+    "symlink-workspace": "^1.9.0",
+    "ts-jest": "^29.1.1"
   }
 }
