--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -35,9 +35,9 @@
     "@interchainjs/types": "^1.11.10",
     "@interchainjs/utils": "^1.11.10",
     "@noble/hashes": "^1.3.1",
+    "@xpla/xplajs": "^1.7.0",
     "decimal.js": "^10.4.3",
-    "interchainjs": "^1.11.10",
-    "@xpla/xplajs": "^1.7.0"
+    "interchainjs": "^1.11.10"
   },
   "keywords": [
     "xpla"
@@ -45,6 +45,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "bech32": "^2.0.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "starshipjs": "^2.4.0"
   }
 }
