--- a/networks/xpla/starship/configs/config.workflow.yaml
+++ b/networks/xpla/starship/configs/config.workflow.yaml
@@ -10,6 +10,9 @@ chains:
       rest: 1317
       rpc: 26657
       faucet: 8007
+    resources:
+      cpu: "0.2"
+      memory: "200M"
 
   - id: cosmoshub-4
     name: cosmoshub
@@ -18,6 +21,9 @@ chains:
       rest: 1313
       rpc: 26653
       faucet: 8003
+    resources:
+      cpu: "0.2"
+      memory: "200M"
 
 relayers:
   - name: xpla-cosmos
@@ -26,13 +32,14 @@ relayers:
     chains:
       - dimension_37-1
       - cosmoshub-4
-
-explorer:
-  enabled: true
-  ports:
-    rest: 8080
+    resources:
+      cpu: "0.1"
+      memory: "100M"
 
 registry:
   enabled: true
   ports:
     rest: 8081
+  resources:
+      cpu: "0.1"
+      memory: "100M"
