--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "xplajs",
-  "version": "1.7.0",
+  "version": "1.8.0-rc.0",
   "private": true,
   "main": "index.js",
   "repository": "git@github.com:xpladev/xplajs.git",
   "scripts": {
-    "codegen:xpla": "telescope transpile --config ./scripts/xpla.telescope.json && telescope transpile --config ./scripts/xpla-react.telescope.json",
+    "codegen": "ts-node ./scripts/codegen.ts",
     "proto": "telescope download --config ./scripts/xpla.protod.config.json",
     "build": "lerna run build --stream",
     "symlink": "symlink-workspace --logLevel error"
@@ -21,11 +21,13 @@
   "devDependencies": {
     "@chain-registry/client": "1.18.1",
     "@chain-registry/v2": "^1.71.216",
-    "@cosmology/telescope": "^1.11.22",
-    "@starship-ci/cli": "^3.10.0",
+    "@hyperweb/telescope": "^1.17.0",
+    "@starship-ci/cli": "^2.9.0",
     "copyfiles": "^2.4.1",
+    "deepmerge": "4.2.2",
     "jest": "^29.6.2",
     "lerna": "^6",
+    "rimraf": "4.4.1",
     "starshipjs": "^2.4.0",
     "symlink-workspace": "^1.9.0",
     "ts-jest": "^29.1.1"
