--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla-react",
-  "version": "1.7.0",
+  "version": "1.8.0-rc.0",
   "description": "xpla-react is a JavaScript library providing react query hooks for interacting with xpla sdk.",
   "main": "index.js",
   "module": "esm/index.js",
@@ -24,12 +24,12 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@interchainjs/cosmos": "^1.11.10",
-    "@interchainjs/cosmos-types": "^1.11.10",
-    "@interchainjs/encoding": "^1.11.10",
-    "@interchainjs/pubkey": "^1.11.10",
-    "@interchainjs/types": "^1.11.10",
-    "@interchainjs/utils": "^1.11.10",
+    "@interchainjs/cosmos": "^1.13.0",
+    "@interchainjs/cosmos-types": "^1.13.0",
+    "@interchainjs/encoding": "^1.13.0",
+    "@interchainjs/pubkey": "^1.13.0",
+    "@interchainjs/types": "^1.13.0",
+    "@interchainjs/utils": "^1.13.0",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3"
   },
