--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla",
-  "version": "1.7.1",
+  "version": "1.8.0-rc.0",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
@@ -28,16 +28,16 @@
   },
   "dependencies": {
     "@ethersproject/transactions": "^5.7.0",
-    "@interchainjs/auth": "^1.11.10",
-    "@interchainjs/cosmos": "^1.11.10",
-    "@interchainjs/cosmos-types": "^1.11.10",
-    "@interchainjs/ethereum": "^1.11.10",
-    "@interchainjs/types": "^1.11.10",
-    "@interchainjs/utils": "^1.11.10",
+    "@interchainjs/auth": "^1.13.0",
+    "@interchainjs/cosmos": "^1.13.0",
+    "@interchainjs/cosmos-types": "^1.13.0",
+    "@interchainjs/ethereum": "^1.13.0",
+    "@interchainjs/types": "^1.13.0",
+    "@interchainjs/utils": "^1.13.0",
     "@noble/hashes": "^1.3.1",
-    "@xpla/xplajs": "^1.7.0",
+    "@xpla/xplajs": "^1.8.0-rc.0",
     "decimal.js": "^10.4.3",
-    "interchainjs": "^1.11.10"
+    "interchainjs": "^1.13.0"
   },
   "keywords": [
     "xpla"
