--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -37,16 +37,17 @@
     "@noble/hashes": "^1.3.1",
     "@xpla/xplajs": "^1.8.0-rc.0",
     "decimal.js": "^10.4.3",
-    "interchainjs": "^1.13.0",
-    "ethers": "^6.13.5"
+    "interchainjs": "^1.13.0"
   },
   "keywords": [
     "xpla"
   ],
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@xpla/evm": "^1.8.0-rc.0",
     "bech32": "^2.0.0",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.5",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "starshipjs": "^2.4.0"
