--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "repository": "git@github.com:xpladev/xplajs.git",
   "scripts": {
-    "codegen": "ts-node ./scripts/codegen.ts",
     "proto": "telescope download --config ./scripts/xpla.protod.config.json",
-    "codegen:evm": "sh ./scripts/get-precompiles.sh",
+    "codegen": "ts-node ./scripts/codegen.ts",
+    "codegen:sol": "sh ./scripts/get-precompiles.sh",
+    "codegen:evm": "hardhat typechain",
     "build": "lerna run build --stream",
     "symlink": "symlink-workspace --logLevel error",
     "prepack": "sh ./scripts/prepack.sh"
@@ -25,19 +26,19 @@
     "@chain-registry/v2": "^1.71.216",
     "@hyperweb/telescope": "^1.17.0",
     "@starship-ci/cli": "^2.9.0",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
     "copyfiles": "^2.4.1",
     "deepmerge": "4.2.2",
+    "hardhat": "^2.26.2",
     "jest": "^29.6.2",
     "lerna": "^6",
     "rimraf": "4.4.1",
     "starshipjs": "^2.4.0",
     "symlink-workspace": "^1.9.0",
     "ts-jest": "^29.1.1",
-    "@typechain/ethers-v6": "^0.5.1",
-    "typechain": "^8.3.2",
-    "hardhat": "^2.26.2",
-    "hardhat-exposed": "^0.3.19",
     "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
     "typescript": "^5.9.2"
   }
 }
