test: @xpla/evm test

--- a/networks/xpla/starship/configs/config.workflow.yaml
+++ b/networks/xpla/starship/configs/config.workflow.yaml
@@ -2,9 +2,9 @@ name: xpla
 version: v1.8.0
 
 chains:
-  - id: dimension_37-1
+  - id: dimension_262144-1
     name: xpla
-    image: nowooj/xpla:v1.8.0-rc0
+    image: ghcr.io/hyperweb-io/starship/xpla:v1.8.0-rc0
     numValidators: 1
     ports:
       rest: 1317
@@ -13,6 +13,21 @@ chains:
     resources:
       cpu: "0.2"
       memory: "200M"
+    genesis:
+    app_state:
+      evm:
+        params:
+          active_static_precompiles: [
+            "0x0000000000000000000000000000000000000100",
+            "0x0000000000000000000000000000000000000400",
+            "0x0000000000000000000000000000000000000800",
+            "0x0000000000000000000000000000000000000801",
+            "0x0000000000000000000000000000000000000805",
+            "0x0000000000000000000000000000000000000806",
+            "0x1000000000000000000000000000000000000005",
+            "0x1000000000000000000000000000000000000001",
+            "0x1000000000000000000000000000000000000004"
+            ]
 
   - id: cosmoshub-4
     name: cosmoshub
@@ -30,7 +45,7 @@ relayers:
     type: hermes
     replicas: 1
     chains:
-      - dimension_37-1
+      - dimension_262144-1
       - cosmoshub-4
     resources:
       cpu: "0.1"
