--- a/networks/xpla/starship/configs/config.workflow.yaml
+++ b/networks/xpla/starship/configs/config.workflow.yaml
@@ -4,7 +4,7 @@ version: v1.8.0
 chains:
   - id: dimension_37-1
     name: xpla
-    image: nowooj/xpla:v1.8.0-rc0
+    image: ghcr.io/hyperweb-io/starship/xpla:v1.8.0-rc0
     numValidators: 1
     ports:
       rest: 1317
@@ -28,10 +28,17 @@ chains:
 relayers:
   - name: xpla-cosmos
     type: hermes
+    image: ghcr.io/hyperweb-io/starship/hermes:1.13.1
     replicas: 1
     chains:
       - dimension_37-1
       - cosmoshub-4
+    config:
+      mode:
+       packets:
+          clear_interval: 10000
+      event_source:
+        mode: "pull"
     resources:
       cpu: "0.1"
       memory: "100M"
