--- a/networks/xpla/starship/configs/config.yaml
+++ b/networks/xpla/starship/configs/config.yaml
@@ -4,7 +4,7 @@ version: v1.8.0
 chains:
   - id: dimension_37-1
     name: xpla
-    image: nowooj/xpla:v1.8.0-rc0
+    image: ghcr.io/hyperweb-io/starship/xpla:v1.8.0-rc0
     numValidators: 1
     ports:
       rest: 1317
@@ -21,12 +21,18 @@ chains:
 
 relayers:
   - name: xpla-cosmos
+    image: ghcr.io/hyperweb-io/starship/hermes:1.13.1
     type: hermes
     replicas: 1
     chains:
       - dimension_37-1
       - cosmoshub-4
-
+    config:
+      mode:
+       packets:
+          clear_interval: 10000
+      event_source:
+        mode: "pull"
 explorer:
   enabled: true
   ports:
