--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -28,17 +28,20 @@
   },
   "dependencies": {
     "@ethersproject/transactions": "^5.7.0",
-    "@interchainjs/auth": "^1.13.0",
-    "@interchainjs/cosmos": "^1.13.0",
-    "@interchainjs/cosmos-types": "^1.13.0",
-    "@interchainjs/ethereum": "^1.13.0",
-    "@interchainjs/types": "^1.13.0",
-    "@interchainjs/utils": "^1.13.0",
+    "@interchainjs/auth": "1.17.2",
+    "@interchainjs/cosmos": "1.17.2",
+    "@interchainjs/cosmos-types": "1.17.2",
+    "@interchainjs/ethereum": "1.17.2",
+    "@interchainjs/types": "1.17.2",
+    "@interchainjs/utils": "1.17.2",
+    "@xpla/xplajs": "^1.8.0-rc.1",
     "@noble/hashes": "^1.3.1",
-    "@xpla/xplajs": "^1.8.0-rc.0",
+    "bech32": "^2.0.0",
+    "bignumber.js": "^9.1.0",
+    "bip39": "^3.1.0",
     "decimal.js": "^10.4.3",
-    "interchainjs": "^1.13.0",
-    "bech32": "^2.0.0"
+    "deepmerge": "4.2.2",
+    "interchainjs": "1.17.2"
   },
   "keywords": [
     "xpla"
