--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xplajs",
-  "version": "1.8.0-rc.1",
+  "version": "1.8.0-rc.2",
   "main": "index.js",
   "module": "esm/index.js",
   "author": "Joowon Yun <joowon@delightlabs.io>",
@@ -17,12 +17,12 @@
   "dependencies": {
     "@cosmjs/stargate": "^0.33.0",
     "@cosmology/lcd": "^0.14.4",
-    "@interchainjs/cosmos": "^1.13.0",
-    "@interchainjs/cosmos-types": "^1.13.0",
-    "@interchainjs/encoding": "^1.13.0",
-    "@interchainjs/pubkey": "^1.13.0",
-    "@interchainjs/types": "^1.13.0",
-    "@interchainjs/utils": "^1.13.0",
+    "@interchainjs/cosmos": "1.16.1",
+    "@interchainjs/cosmos-types": "1.16.1",
+    "@interchainjs/encoding": "1.16.1",
+    "@interchainjs/pubkey": "1.16.1",
+    "@interchainjs/types": "1.16.1",
+    "@interchainjs/utils": "1.16.1",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3"
   },
