--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -17,12 +17,12 @@
   "dependencies": {
     "@cosmjs/stargate": "^0.33.0",
     "@cosmology/lcd": "^0.14.4",
-    "@interchainjs/cosmos": "1.16.1",
-    "@interchainjs/cosmos-types": "1.16.1",
-    "@interchainjs/encoding": "1.16.1",
-    "@interchainjs/pubkey": "1.16.1",
-    "@interchainjs/types": "1.16.1",
-    "@interchainjs/utils": "1.16.1",
+    "@interchainjs/cosmos": "^1.17.4",
+    "@interchainjs/cosmos-types": "^1.17.4",
+    "@interchainjs/encoding": "^1.17.4",
+    "@interchainjs/pubkey": "^1.17.4",
+    "@interchainjs/types": "^1.17.4",
+    "@interchainjs/utils": "^1.17.4",
     "@noble/hashes": "^1.3.1",
     "decimal.js": "^10.4.3"
   },
