--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -28,21 +28,21 @@
   },
   "dependencies": {
     "@ethersproject/transactions": "^5.7.0",
-    "@interchainjs/auth": "1.16.1",
-    "@interchainjs/cosmos": "1.16.1",
-    "@interchainjs/cosmos-types": "1.16.1",
-    "@interchainjs/ethereum": "1.16.1",
-    "@interchainjs/types": "1.16.1",
-    "@interchainjs/utils": "1.16.1",
-    "@xpla/xplajs": "^1.8.0-rc.1",
+    "@interchainjs/auth": "^1.17.4",
+    "@interchainjs/cosmos": "^1.17.4",
+    "@interchainjs/cosmos-types": "^1.17.4",
+    "@interchainjs/ethereum": "^1.17.4",
+    "@interchainjs/types": "^1.17.4",
+    "@interchainjs/utils": "^1.17.4",
+    "@xpla/xplajs": "^1.8.0",
     "@noble/hashes": "^1.3.1",
     "bech32": "^2.0.0",
     "bignumber.js": "^9.1.0",
     "bip39": "^3.1.0",
     "decimal.js": "^10.4.3",
     "deepmerge": "4.2.2",
-    "interchainjs": "^1.13.0",
-    "ethers": "^6.13.5"
+    "ethers": "^6.13.5",
+    "interchainjs": "^1.17.4"
   },
   "keywords": [
     "xpla"
