--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/contracts",
-  "version": "1.8.0-rc.0",
+  "version": "1.8.0",
   "description": "XPLA precompiled contract interfaces and types",
   "files": [
     "**/*.sol",
