--- a/libs/evm/package.json
+++ b/libs/evm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/evm",
-  "version": "1.8.0-rc.0",
+  "version": "1.8.0",
   "description": "TypeChain generated TypeScript interfaces for XPLA EVM smart contracts",
   "main": "dist/index.js",
   "module": "dist/esm/index.js",
