--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla-react",
-  "version": "1.8.0-rc.1",
+  "version": "1.8.0",
   "description": "xpla-react is a JavaScript library providing react query hooks for interacting with xpla sdk.",
   "main": "index.js",
   "module": "esm/index.js",
