--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xpla/xpla",
-  "version": "1.8.0-rc.4",
+  "version": "1.8.0",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
