--- a/networks/xpla/starship/configs/config.yaml
+++ b/networks/xpla/starship/configs/config.yaml
@@ -2,9 +2,9 @@ name: xpla
 version: v1.8.0
 
 chains:
-  - id: dimension_262144-1
+  - id: dimension_37-1
     name: xpla
-    image: ghcr.io/hyperweb-io/starship/xpla:v1.8.0-rc0
+    image: ghcr.io/hyperweb-io/starship/xpla:v1.8.0
     numValidators: 1
     ports:
       rest: 1317
@@ -29,6 +29,7 @@ chains:
 
   - id: cosmoshub-4
     name: cosmoshub
+    image: ghcr.io/hyperweb-io/starship/gaia:v21.0.1
     numValidators: 1
     ports:
       rest: 1313
@@ -41,12 +42,12 @@ relayers:
     type: hermes
     replicas: 1
     chains:
-      - dimension_262144-1
+      - dimension_37-1
       - cosmoshub-4
     config:
       mode:
-       packets:
-          clear_interval: 10000
+       clients:
+        misbehaviour: false
       event_source:
         mode: "pull"
 explorer:
