--- a/libs/evm/package.json
+++ b/libs/evm/package.json
@@ -56,7 +56,7 @@
   "devDependencies": {
     "@types/node": "^20.0.0",
     "rimraf": "^5.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "catalog:"
   },
   "publishConfig": {
     "access": "public",
