--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -33,15 +33,18 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "@cosmjs/stargate": "^0.33.0",
+    "@cosmjs/stargate": "catalog:",
+    "@cosmjs/tendermint-rpc": "catalog:",
     "@cosmology/lcd": "^0.14.4",
-    "@interchainjs/cosmos": "^1.19.2",
-    "@interchainjs/cosmos-types": "^1.19.1",
-    "@interchainjs/encoding": "^1.18.1",
-    "@interchainjs/pubkey": "^1.19.1",
-    "@interchainjs/types": "^1.19.1",
-    "@interchainjs/utils": "^1.19.1",
+    "@interchainjs/cosmos": "catalog:",
+    "@interchainjs/cosmos-types": "catalog:",
+    "@interchainjs/encoding": "catalog:",
+    "@interchainjs/math": "catalog:",
+    "@interchainjs/pubkey": "catalog:",
+    "@interchainjs/types": "catalog:",
+    "@interchainjs/utils": "catalog:",
     "@noble/hashes": "^1.3.1",
+    "@types/node": "catalog:",
     "decimal.js": "^10.4.3"
   },
   "license": "MIT",
