--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -46,13 +46,14 @@
   },
   "dependencies": {
     "@ethersproject/transactions": "^5.7.0",
-    "@interchainjs/auth": "^1.19.1",
-    "@interchainjs/cosmos": "^1.19.2",
-    "@interchainjs/cosmos-types": "^1.19.1",
-    "@interchainjs/ethereum": "^1.19.1",
-    "@interchainjs/types": "^1.19.1",
-    "@interchainjs/utils": "^1.19.1",
-    "@xpla/xplajs": "^1.8.0",
+    "@interchainjs/amino": "catalog:",
+    "@interchainjs/auth": "catalog:",
+    "@interchainjs/cosmos": "catalog:",
+    "@interchainjs/cosmos-types": "catalog:",
+    "@interchainjs/ethereum": "catalog:",
+    "@interchainjs/types": "catalog:",
+    "@interchainjs/utils": "catalog:",
+    "@xpla/xplajs": "catalog:",
     "@noble/hashes": "^1.3.1",
     "bech32": "^2.0.0",
     "bignumber.js": "^9.1.0",
@@ -60,13 +61,13 @@
     "decimal.js": "^10.4.3",
     "deepmerge": "4.2.2",
     "ethers": "^6.13.5",
-    "interchainjs": "^1.19.0"
+    "interchainjs": "catalog:"
   },
   "keywords": [
     "xpla"
   ],
   "devDependencies": {
-    "@interchainjs/encoding": "^1.18.1",
+    "@interchainjs/encoding": "catalog:",
     "@types/jest": "^29.5.14",
     "@xpla/evm": "^1.8.0",
     "bech32": "^2.0.0",
