--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Set Up Starship Infrastructure
         id: starship-infra
-        uses: hyperweb-io/starship-action@1.0.0
+        uses: ./.github/actions/starship
         with:
           config: networks/xpla/starship/configs/config.workflow.yaml
 
