fix: update starship to have correct depedencies

--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -50,10 +50,12 @@
     "@interchainjs/auth": "catalog:",
     "@interchainjs/cosmos": "catalog:",
     "@interchainjs/cosmos-types": "catalog:",
+    "@interchainjs/crypto": "catalog:",
     "@interchainjs/ethereum": "catalog:",
     "@interchainjs/types": "catalog:",
     "@interchainjs/utils": "catalog:",
-    "@xpla/xplajs": "catalog:",
+    "@xpla/evm": "workspace:",
+    "@xpla/xplajs": "workspace:",
     "@noble/hashes": "^1.3.1",
     "bech32": "^2.0.0",
     "bignumber.js": "^9.1.0",
@@ -67,6 +69,7 @@
     "xpla"
   ],
   "devDependencies": {
+    "@chain-registry/types": "catalog:",
     "@interchainjs/encoding": "catalog:",
     "@types/jest": "^29.5.14",
     "@xpla/evm": "^1.8.0",
