fix: correct exports order (types first)

--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -16,19 +16,19 @@
   },
   "exports": {
     ".": {
+      "types": "./index.d.ts",
       "import": "./esm/index.js",
-      "require": "./index.js",
-      "types": "./index.d.ts"
+      "require": "./index.js"
     },
     "./*": {
+      "types": "./*.d.ts",
       "import": "./esm/*.js",
-      "require": "./*.js",
-      "types": "./*.d.ts"
+      "require": "./*.js"
     },
     "./*.js": {
+      "types": "./*.d.ts",
       "import": "./esm/*.js",
-      "require": "./*.js",
-      "types": "./*.d.ts"
+      "require": "./*.js"
     },
     "./package.json": "./package.json"
   },
