--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -1,34 +1,35 @@
 {
   "name": "@xpla/xplajs",
   "version": "1.8.1",
-  "main": "index.js",
-  "module": "esm/index.js",
+  "main": "index.cjs",
+  "module": "index.js",
+  "type": "module",
   "author": "Joowon Yun <joowon@delightlabs.io>",
   "homepage": "https://github.com/xpladev/xplajs",
   "scripts": {
-    "copy": "copyfiles -f README.md package.json dist",
-    "clean": "rimraf dist/**",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy"
+    "build": "tsdown"
   },
   "publishConfig": {
-    "access": "public",
-    "directory": "dist"
+    "access": "public"
   },
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": {
       "types": "./index.d.ts",
-      "import": "./esm/index.js",
-      "require": "./index.js"
+      "import": "./index.js",
+      "require": "./index.cjs"
     },
     "./*": {
       "types": "./*.d.ts",
-      "import": "./esm/*.js",
-      "require": "./*.js"
+      "import": "./*.js",
+      "require": "./*.cjs"
     },
     "./*.js": {
       "types": "./*.d.ts",
-      "import": "./esm/*.js",
-      "require": "./*.js"
+      "import": "./*.js",
+      "require": "./*.cjs"
     },
     "./package.json": "./package.json"
   },
@@ -46,6 +47,9 @@
     "@noble/hashes": "^1.3.1",
     "@types/node": "catalog:",
     "decimal.js": "^10.4.3"
+  },
+  "devDependencies": {
+    "tsdown": "catalog:"
   },
   "license": "MIT",
   "description": ""
