--- a/networks/xpla/package.json
+++ b/networks/xpla/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@xpla/xpla",
   "version": "1.8.3",
-  "main": "index.js",
-  "module": "esm/index.js",
+  "main": "index.cjs",
+  "module": "index.js",
   "types": "index.d.ts",
+  "type": "module",
   "author": "Joowon Yun <joowon@delightlabs.io>",
   "homepage": "https://github.com/xpladev/xplajs",
   "repository": {
@@ -12,32 +13,31 @@
   },
   "license": "MIT",
   "publishConfig": {
-    "access": "public",
-    "directory": "dist"
+    "access": "public"
   },
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": {
       "types": "./index.d.ts",
-      "import": "./esm/index.js",
-      "require": "./index.js"
+      "import": "./index.js",
+      "require": "./index.cjs"
     },
     "./*": {
       "types": "./*.d.ts",
-      "import": "./esm/*.js",
-      "require": "./*.js"
+      "import": "./*.js",
+      "require": "./*.cjs"
     },
     "./*.js": {
       "types": "./*.d.ts",
-      "import": "./esm/*.js",
-      "require": "./*.js"
+      "import": "./*.js",
+      "require": "./*.cjs"
     },
     "./package.json": "./package.json"
   },
   "scripts": {
-    "copy": "copyfiles -f README.md package.json dist",
-    "clean": "rimraf dist/**",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
-    "build:dev": "npm run clean; tsc --declarationMap; tsc -p tsconfig.esm.json",
+    "build": "tsdown",
     "lint": "eslint . --fix",
     "starship:run": "sh ../../scripts/run-starship.sh",
     "starship:clean": "starship stop --config ./starship/configs/config.yaml",
@@ -63,7 +63,8 @@
     "decimal.js": "^10.4.3",
     "deepmerge": "4.2.2",
     "ethers": "^6.13.5",
-    "interchainjs": "catalog:"
+    "interchainjs": "catalog:",
+    "tsdown": "catalog:"
   },
   "keywords": [
     "xpla"
