--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "target": "es2022",
-      "module": "commonjs",
+      "module": "esnext",
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
       "strict": true,
@@ -10,7 +10,7 @@
       "sourceMap": false,
       "declaration": true,
       "resolveJsonModule": true,
-      "moduleResolution": "node"
+      "moduleResolution": "bundler"
     },
     "exclude": ["dist", "node_modules"]
   }
