--- a/libs/evm/package.json
+++ b/libs/evm/package.json
@@ -2,31 +2,31 @@
   "name": "@xpla/evm",
   "version": "1.8.0",
   "description": "TypeChain generated TypeScript interfaces for XPLA EVM smart contracts",
-  "main": "index.js",
-  "module": "esm/index.js",
+  "main": "index.cjs",
+  "module": "index.js",
   "types": "index.d.ts",
+  "type": "module",
   "exports": {
     ".": {
-      "import": "./esm/index.js",
-      "require": "./index.js",
+      "import": "./index.js",
+      "require": "./index.cjs",
       "types": "./index.d.ts"
     },
     "./*": {
-      "import": "./esm/*.js",
-      "require": "./*.js",
+      "import": "./*.js",
+      "require": "./*.cjs",
       "types": "./*.d.ts"
     },
     "./*.js": {
-      "import": "./esm/*.js",
-      "require": "./*.js",
+      "import": "./*.js",
+      "require": "./*.cjs",
       "types": "./*.d.ts"
     },
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "npm run clean && tsc && tsc -p tsconfig.esm.json",
-    "clean": "rimraf dist",
-    "prepublishOnly": "npm run build",
+    "build": "tsdown",
+    "prepublishOnly": "pnpm run build",
     "typecheck": "tsc --noEmit"
   },
   "keywords": [
@@ -56,10 +56,13 @@
   "devDependencies": {
     "@types/node": "^20.0.0",
     "rimraf": "^5.0.0",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "tsdown": "catalog:"
   },
   "publishConfig": {
-    "access": "public",
-    "directory": "dist"
-  }
+    "access": "public"
+  },
+  "files": [
+    "dist"
+  ]
 }
