--- a/libs/xpla-react/package.json
+++ b/libs/xpla-react/package.json
@@ -2,9 +2,9 @@
   "name": "@xpla/xpla-react",
   "version": "1.8.1",
   "description": "xpla-react is a JavaScript library providing react query hooks for interacting with xpla sdk.",
-  "main": "index.cjs",
-  "module": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "author": "Joowon Yun <joowon@delightlabs.io>",
   "homepage": "https://github.com/xpladev/xplajs",
@@ -21,19 +21,19 @@
   ],
   "exports": {
     ".": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "require": "./index.cjs"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     },
     "./*": {
-      "types": "./*.d.ts",
-      "import": "./*.js",
-      "require": "./*.cjs"
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.js",
+      "require": "./dist/*.cjs"
     },
     "./*.js": {
-      "types": "./*.d.ts",
-      "import": "./*.js",
-      "require": "./*.cjs"
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.js",
+      "require": "./dist/*.cjs"
     },
     "./package.json": "./package.json"
   },
