--- a/libs/xplajs/package.json
+++ b/libs/xplajs/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@xpla/xplajs",
   "version": "1.8.1",
-  "main": "index.cjs",
-  "module": "index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "type": "module",
   "author": "Joowon Yun <joowon@delightlabs.io>",
   "homepage": "https://github.com/xpladev/xplajs",
@@ -17,19 +17,19 @@
   ],
   "exports": {
     ".": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "require": "./index.cjs"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     },
     "./*": {
-      "types": "./*.d.ts",
-      "import": "./*.js",
-      "require": "./*.cjs"
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.js",
+      "require": "./dist/*.cjs"
     },
     "./*.js": {
-      "types": "./*.d.ts",
-      "import": "./*.js",
-      "require": "./*.cjs"
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.js",
+      "require": "./dist/*.cjs"
     },
     "./package.json": "./package.json"
   },
